--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,8 +6,8 @@
       <!-- mobile menu bars -->
       <a href="#" onClick="return false;" class="bars" (click)="mobileMenuSidebarOpen($event,'overlay-open')"></a>
       <a class="navbar-brand" routerLink="dashboard/main">
-        <img src="assets/images/logo.png" alt="" />
-        <span class="logo-name">Lorax</span>
+        <img src="assets/images/logo.jpg" alt="" />
+        <!-- <span class="logo-name">Pluriel Web</span> -->
       </a>
     </div>
     <div class="collapse navbar-collapse" [ngClass]="isNavbarCollapsed ? '' : 'show'">
@@ -41,48 +41,7 @@
           </mat-menu>
         </li>
         <!-- #START# Notifications-->
-        <li class="nav-item" ngbDropdown>
-          <button mat-button [matMenuTriggerFor]="notificationMenu" class="nav-notification-icons">
-            <app-feather-icons [icon]="'bell'" [class]="'header-icon'"></app-feather-icons>
-            <span class="label-count bg-orange"></span>
-          </button>
-          <mat-menu #notificationMenu="matMenu" class="nfc-menu" xPosition="before">
-            <div class="nfc-header">
-              <h5 class="mb-0">Notitications</h5>
-              <a class="nfc-mark-as-read">Mark all as read</a>
-            </div>
-            <div class="nfc-dropdown">
-              <ng-scrollbar style="height: 350px" visibility="hover">
-                <div class="noti-list header-menu">
-                  <div class="menu">
-                    <div>
-                      <button mat-menu-item *ngFor="let notification of notifications" onClick="return false;"
-                        [ngClass]="[notification.status]">
-                        <span class="table-img msg-user ">
-                          <i class="material-icons-two-tone nfc-type-icon"
-                            [ngClass]="[notification.color]">{{notification.icon}}</i>
-                        </span>
-                        <span class="menu-info">
-                          <span class="menu-title">{{notification.message}}</span>
-                          <span class="menu-desc mt-2">
-                            <i class="material-icons">access_time</i> {{notification.time}}
-                          </span>
-                        </span>
-                        <span class="nfc-close">
-                          <app-feather-icons [icon]="'x'" [class]="'user-menu-icons'"></app-feather-icons>
-                        </span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </ng-scrollbar>
-            </div>
-            <div class="nfc-footer">
-              <a class="nfc-read-all">Read
-                All Notifications</a>
-            </div>
-          </mat-menu>
-        </li>
+
         <!-- #END# Notifications-->
         <li class="nav-item user_profile">
           <button mat-button [matMenuTriggerFor]="profilemenu">
